--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://evansmogeni254:%23Evansmark2020@cluster0.tbtly.mongodb.net/taskido-spring
+      uri: "your mongodb uri here"
   application:
     name: todo-api
 server:
